# fzp

./: .gitignore  Cargo.toml  DESIGN.md  EXAMPLES.md  INTERFACE.md  LICENSE  README.md  REQUIREMENTS.md  SKILL.md  design-advisor.md  design-discussion.md  hunch.toml  sample-input.jsonl
.claude-plugin/: marketplace.json  plugin.json
skills/fzp/: SKILL.md
skills/release/: SKILL.md
src/: api.rs  builtin.toml  cli.rs  init.rs  main.rs  pipeline.rs  preset.rs
