[package]
name = "fzp"
version = "0.1.0"
edition = "2021"
description = "Fuzzy Processor - parallel LLM inference pipe filter"
license = "MIT"
repository = "https://github.com/rail44/fzp"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
tokio-stream = "0.1"
toml = "0.8"
dirs = "6"
